# modern-tools-for-python-development_talk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup
.devcontainer/: devcontainer.json
